refactor: rename project from TLDR to Distil
- Rename package directories: tldr-core → distil-core, tldr-cli → distil-cli
- Update package names: @edda-tldr/* → @edda-distil/*
- Rename CLI command: tldr → distil
- Update cache directory: .tldr → .distil
- Update all documentation and APS planning docs
- Update repository URLs to EddaCraft/distil

Authored-By: Aneki (joshuaboys)

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "edda-tldr",
+  "name": "edda-distil",
   "private": true,
   "description": "Token-efficient code analysis for LLMs",
   "scripts": {
