--- a/packages/distil-cli/package.json
+++ b/packages/distil-cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@edda-distil/cli",
+  "name": "@distil/cli",
   "version": "0.1.0",
   "description": "CLI for Distil - token-efficient code analysis for LLMs",
   "type": "module",
@@ -19,7 +19,7 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "@edda-distil/core": "workspace:*",
+    "@distil/core": "workspace:*",
     "commander": "^12.1.0"
   },
   "devDependencies": {
@@ -36,7 +36,7 @@
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/EddaCraft/distil.git",
+    "url": "https://github.com/joshuaboys/distil.git",
     "directory": "packages/distil-cli"
   }
 }
